--- a/security.yml
+++ b/security.yml
@@ -2,7 +2,6 @@ security:
     encoders:
         Symfony\Component\Security\Core\User\User: sha512
         eclore\userBundle\Entity\User: sha512
-        FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
         ROLE_USER:        [ROLE_USER]
@@ -12,10 +11,15 @@ security:
         ROLE_INSTM:        [ROLE_INSTM, ROLE_USER]
         ROLE_ADMIN:       [ROLE_YOUNG, ROLE_ASSOM, ROLE_INSTM]
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
-    
+
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username
+        in_memory:
+            memory:
+                users:
+                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
+                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        main:
+            entity: { class: eclore\userBundle\Entity\User, property: username }
 
     firewalls:
         dev:
@@ -25,7 +29,7 @@ security:
         main:
             pattern:   ^/
             anonymous: true
-            provider:  fos_userbundle
+            provider:  main
             form_login:
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
