--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,7 @@ imports:
     - { resource: @ecloreuserBundle/Resources/config/services.yml }
     
 spy_timeline:
+    paginator: ~
     drivers:
         orm:
             object_manager: doctrine.orm.entity_manager
@@ -108,6 +109,7 @@ fos_user:
     user_class: eclore\userBundle\Entity\User
     service:
         mailer: fos_user.mailer.twig_swift
+        user_provider : fos_user.user_provider.username
     from_email:
             address:        contact@reseau-eclore.org
             sender_name:    "Réseau Eclore"
