--- a/security.yml
+++ b/security.yml
@@ -2,6 +2,7 @@ security:
     encoders:
         Symfony\Component\Security\Core\User\User: sha512
         eclore\userBundle\Entity\User: sha512
+        FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
         ROLE_USER:        [ROLE_USER]
@@ -13,13 +14,8 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
-        main:
-            entity: { class: eclore\userBundle\Entity\User, property: username }
+        fos_userbundle:
+            id: fos_user.user_provider.username
 
     firewalls:
         dev:
@@ -29,7 +25,7 @@ security:
         main:
             pattern:   ^/
             anonymous: true
-            provider:  main
+            provider:  fos_userbundle
             form_login:
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
